chore: code rearrange